--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,249 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.text-imp-1 {
+  font-family: 'Cabin Sketch', cursive;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  text-align: left; }
+
+.text-imp-2 {
+  font-family: 'Cabin Sketch', cursive;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  text-align: left; }
+
+.text-1 {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  text-align: left; }
+
+.text-2 {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  text-align: left; }
+
+.text-3 {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  text-align: left; }
+
+.index {
+  background-color: #696969; }
+  .index .header {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    background-color: #2F4F4F; }
+    .index .header .text-imp-1 {
+      width: 24%;
+      display: inline-block;
+      color: #B22222;
+      font-size: 14px; }
+    .index .header .links {
+      display: inline-block;
+      margin-left: 10px; }
+  .index .body {
+    float: left;
+    display: inline-block;
+    width: 45%; }
+    .index .body .text-imp-1 {
+      padding-bottom: 20px;
+      color: #B22222; }
+  .index .aside {
+    float: right;
+    width: 50%;
+    display: inline-block; }
+    .index .aside .text-imp-1 {
+      margin-left: 40px;
+      color: #B22222;
+      padding-bottom: 20px; }
+    .index .aside .text-1 {
+      width: 30%;
+      padding-bottom: 20px;
+      display: block;
+      color: #B22222;
+      margin-left: 40px; }
+
+@media only screen and (min-width: 768px) {
+  .index .header .links {
+    width: 55%;
+    padding-left: 100px; }
+    .index .header .links .text-imp-1 {
+      width: 31%;
+      padding-right: 0px; }
+  .index .body {
+    width: 60%; }
+  .index .aside {
+    width: 30%; }
+    .index .aside .line {
+      float: left;
+      background-color: #B22222;
+      width: 1px;
+      height: 700px; }
+    .index .aside .sep {
+      float: right; }
+
+  .about .header .links {
+    width: 55%;
+    padding-left: 100px; }
+    .about .header .links .text-imp-1 {
+      width: 31%;
+      padding-right: 0px; }
+  .about .body {
+    width: 60%; }
+  .about .aside {
+    width: 30%; }
+    .about .aside .line {
+      float: left;
+      background-color: #B22222;
+      width: 1px;
+      height: 700px; }
+    .about .aside .sep {
+      float: right; } }
+@media only screen and (min-width: 1439px) {
+  .index {
+    font-size: 20px; }
+    .index * {
+      font-size: 20px; }
+    .index .header {
+      height: 50px; }
+      .index .header .text-imp-1 {
+        padding-top: 12px; }
+      .index .header .links {
+        padding-top: 12px;
+        width: 55%;
+        padding-left: 100px; }
+        .index .header .links .text-imp-1 {
+          width: 31%;
+          padding-right: 0px; }
+    .index .body {
+      width: 60%; }
+    .index .aside {
+      width: 30%; }
+      .index .aside .line {
+        float: left;
+        background-color: #B22222;
+        width: 1px;
+        height: 1000px; }
+      .index .aside .sep {
+        float: right; }
+
+  .about * {
+    font-size: 20px; }
+  .about .header {
+    height: 50px; }
+    .about .header .text-imp-1 {
+      padding-top: 12px;
+      font-size: 20px; }
+    .about .header .links {
+      padding-top: 12px;
+      width: 55%;
+      padding-left: 100px; }
+      .about .header .links .text-imp-1 {
+        width: 31%;
+        padding-right: 0px; }
+  .about .body {
+    width: 60%; }
+  .about .aside {
+    width: 30%; }
+    .about .aside .line {
+      float: left;
+      background-color: #B22222;
+      width: 1px;
+      height: 1000px; }
+    .about .aside .sep {
+      float: right; } }
+.about {
+  background-color: #696969; }
+  .about .header {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    background-color: #2F4F4F; }
+    .about .header .text-imp-1 {
+      width: 24%;
+      display: inline-block;
+      color: #B22222;
+      font-size: 14px; }
+    .about .header .links {
+      display: inline-block;
+      margin-left: 10px; }
+  .about .body {
+    width: 45%;
+    float: left; }
+    .about .body .text-imp-1 {
+      color: #B22222;
+      padding-bottom: 20px; }
+    .about .body .text-1 {
+      display: block;
+      padding-top: 20px; }
+    .about .body .img {
+      display: block;
+      width: 60%;
+      height: 40%; }
+  .about .aside {
+    float: right;
+    width: 50%;
+    display: inline-block; }
+    .about .aside .text-imp-1 {
+      margin-left: 60px;
+      color: #B22222;
+      padding-bottom: 20px; }
+    .about .aside .text-1 {
+      width: 30%;
+      padding-bottom: 20px;
+      display: block;
+      color: #B22222;
+      margin-left: 60px; }
 
 /*# sourceMappingURL=style.css.map */
